2006-10-20 Carlos Nieves Onega <cnieves@iespana.es>

	* po/es_ES.po: Fixed the header of the spanish translation.
	Thanks to Werner Hoch for pointing it out.

2006-10-19 Carlos Nieves Onega <cnieves@iespana.es>

	* po/es_ES.po: Updated spanish translation.

2006-10-19  Patrick Bernaud  <b-patrick@wanadoo.fr>

	* src/x_multiattrib.c: Fixed toggle renderers to update their
	appearance when they are activated from keyboard. Bug reported by
	Peter Clifton.

	* configure.ac: Cleaned up to remove remaining traces of noweb
	days.

	* noweb/.cvsignore: Removed file for directory to get pruned on
	checkout.

	* docs/gschemdoc.texi, docs/texinfo.tex: Removed unused files for
	old noweb documentation.

	* scripts/geda_totexi.in:
	* scripts/notangle_guile.in: Removed unused scripts for noweb.

	* po/fr_FR.po: Updated the French translation.

	* po/*: Updated and merged i18n files.

	* src/rcstrings.c: Rebuilt file from system-gschemrc for changes
	in the application menus.

2006-10-18 Carlos Nieves Onega <cnieves@iespana.es>

        * ChangeLog: Improved description of the "fit page when window is
	maximized" patch on 2006-10-04, and added src/x_window.c: it was 
	changed, but it was missing in the ChangeLog.
	Also added a note in the entry for 2006-09-30 regarding this feature,
	which relates to the entry in 2006-10-04.
	
        * include/prototype.h: Removed the definition of x_event_window_state.
	This function was added on 2006-09-30 when doing a zoom extents when
	the user maximizes the gschem window. It was later removed on
	2006-10-04 when Patrick found a new way to do it in x_event_configure.
	
	* src/i_callbacks.c: call the new page hook in the file_new_window
	callback, after the x_window_setup call (the latter creates a new 
	page). Thanks to Peter Clifton for reporting the bug.
	
	* src/gschem.c: When modifying this file on 2006-10-16, the 
	new page hook call was moved inside the parse arguments loop.